--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,94 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dabang Dashboard</title>
+    <title>Dashboard</title>
 
-    <link rel="stylesheet" href="css/dashboard.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/dashboard.css" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet"/>
 
-    <!-- Boxicons (for icons) -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
-  <body>
+  <body class="dashboard-page">
     <!-- Sidebar -->
     <aside class="sidebar" id="sidebar">
-      <div class="logo">
-        <i class="bx bx-cube-alt"></i>
-      </div>
+      <div class="logo"><i class="bx bx-cube-alt"></i></div>
 
       <nav class="menu">
         <h1 class="menu-header">Menu</h1>
+
         <div class="menu-item nav-active" data-tooltip="Dashboard">
-          <i class="bx bx-home-smile"></i>
-          <span>Dashboard</span>
+          <i class="bx bx-home-smile"></i><span>Dashboard</span>
         </div>
-        <div class="menu-item" data-tooltip="Leaderboard">
+
+        <div class="menu-item" data-tooltip="Income">
           <i class="bx bx-bar-chart-alt-2"></i>
-          <span>Leaderboard</span>
+          <a href="/income" style="text-decoration:none;color:inherit"><span>Income</span></a>
         </div>
-        <div class="menu-item" data-tooltip="Orders">
-          <i class="bx bx-cart"></i>
-          <span>Orders</span>
+
+        <div class="menu-item" data-tooltip="Report">
+          <i class="bx bx-line-chart"></i><span>Report</span>
         </div>
-        <div class="menu-item" data-tooltip="Products">
-          <i class="bx bx-package"></i>
-          <span>Products</span>
-        </div>
-        <div class="menu-item" data-tooltip="Sales Report">
-          <i class="bx bx-line-chart"></i>
-          <span>Sales Report</span>
-        </div>
-        <div class="menu-item" data-tooltip="Messages">
-          <i class="bx bx-chat"></i>
-          <span>Messages</span>
-        </div>
+
         <div class="menu-item" data-tooltip="Settings">
-          <i class="bx bx-cog"></i>
-          <span>Settings</span>
+          <i class="bx bx-cog"></i><span>Settings</span>
         </div>
 
         <h1 class="menu-header shortcuts">Shortcuts</h1>
-        <div class="menu-item" data-tooltip="Add">
-          <i class="bx bx-add-to-queue"></i>
-          <span>Add</span>
-        </div>
-        <div class="menu-item" data-tooltip="Remove">
-          <i class="bx bx-message-square-minus"></i>
-          <span>Remove</span>
-        </div>
+        <div class="menu-item" data-tooltip="Add"><i class="bx bx-add-to-queue"></i><span>Add</span></div>
+        <div class="menu-item" data-tooltip="Remove"><i class="bx bx-message-square-minus"></i><span>Remove</span></div>
       </nav>
 
-      <!-- Logout -->
       <div class="logout" data-tooltip="Logout">
-        <i class="bx bx-log-out"></i>
-        <span>Logout</span>
+        <i class="bx bx-log-out"></i><span>Logout</span>
       </div>
     </aside>
 
-    <!-- Main Dashboard Content -->
+    <!-- Main Content -->
     <main class="dashboard-content">
       <div class="header">
-        <h1>Users</h1>
+        <h1>Welcome, <span id="userName">User</span>!</h1>
         <div>
-          <button id="refreshButton">Refresh List</button>
+          <button id="refreshButton">Refresh</button>
           <button id="logoutButton">Log Out</button>
         </div>
       </div>
 
-      <div class="user-list" id="userList"></div>
+      <!-- KPI Cards -->
+      <div class="kpi-cards">
+        <div class="card income">
+          <h2>Total Income</h2>
+          <p id="kpiIncome">No data</p>
+        </div>
+        <div class="card expenses">
+          <h2>Total Expenses</h2>
+          <p id="kpiExpenses">No data</p>
+        </div>
+        <div class="card budget">
+          <h2>Monthly Budget</h2>
+          <p id="kpiBudget">No data</p>
+        </div>
+      </div>
+
+      <!-- Charts: keep three cards, only income is populated -->
+      <div class="charts-grid">
+        <div class="chart-box">
+          <div class="chart-title">Monthly Income Trend</div>
+          <canvas id="incomeChart"></canvas>
+        </div>
+
+        <div class="chart-box">
+          <div class="chart-title">Expense Breakdown by Category</div>
+          <div class="chart-placeholder"></div>
+        </div>
+
+        <div class="chart-box">
+          <div class="chart-title">Budget vs Actual</div>
+          <div class="chart-placeholder"></div>
+        </div>
+      </div>
     </main>
 
-    <!-- JS (ensure these files exist in /public/js) -->
-    <script src="js/datamodel.js"></script>
-    <script src="js/dashboard.js"></script>
+    <!-- Scripts -->
+    <script src="/js/datamodel.js"></script>
+    <script src="/js/dashboard.js"></script>
   </body>
 </html>
